--- a/styles/screen1.scss
+++ b/styles/screen1.scss
@@ -110,7 +110,7 @@
       height: 38px;
       background: #FFFFFF;
       border-radius: 31px;
-      column-gap: 19px;
+      column-gap: 8%;
 
       @media screen and (min-width:1041px) {
         width: 240px;
